--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,14 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        
+      
+        
+        
+        
+        
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
