--- a/templates/resultat/index.html.twig
+++ b/templates/resultat/index.html.twig
@@ -9,18 +9,8 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello resultat/index.html.twig! ✅</h1>
+    <h1>Hello resultat/index.html.twig!!!!! ✅</h1>
 
- <!-- Le type d'encodage des données, enctype, DOIT être spécifié comme ce qui suit -->
-        <form enctype="multipart/form-data" action="" method="post">
 
-             <!-- MAX_FILE_SIZE doit précéder le champ input de type file -->
-                <input type="hidden" name="MAX_FILE_SIZE" value="30000" />
-
-                <!-- Le nom de l'élément input détermine le nom dans le tableau $_FILES -->
-                Envoyez ce fichier : <input name="userfile" type="file" />
-
-                <input type="submit" value="Envoyer le fichier" />
-        </form>
 </div>
 {% endblock %}
