--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,30 +19,30 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="general-hommes">General Hommes</a>
+                        <a class="nav-link" href="/resultats/general-hommes">General Hommes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="general-femmes">General Femmes</a>
+                        <a class="nav-link" href="/resultats/general-femmes">General Femmes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="M1M">M1M</a>
+                        <a class="nav-link" href="/resultats/M1M">M1M</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="M1F">M1F</a>
+                        <a class="nav-link" href="/resultats/M1F">M1F</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="M2M">M2M</a>
+                        <a class="nav-link" href="/resultats/M2M">M2M</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container">
-        {% block body %}{% endblock %}
-    </div>
-    </head>
+   
+      
     <body>
+     <div class="container">
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+    </div>
     </body>
 </html>
