--- a/templates/resultats/resultats.html.twig
+++ b/templates/resultats/resultats.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ message }}
+    {{ message.text_message }}
 {% endblock %}
 
 {% block body %}
