--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,22 +16,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/PHP_ski/public/resultats">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="general-hommes">General Hommes</a>
+                        <a class="nav-link" href="/PHP_ski/public/resultats/general-hommes">General Hommes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="general-femmes">General Femmes</a>
+                        <a class="nav-link" href="/PHP_ski/public/resultats/general-femmes">General Femmes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="M1M">M1M</a>
+                        <a class="nav-link" href="/resultats/M1M">M1M</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="M1F">M1F</a>
+                        <a class="nav-link" href="/resultats/M1F">M1F</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="M2M">M2M</a>
+                        <a class="nav-link" href="/resultats/M2M">M2M</a>
                     </li>
                 </ul>
             </div>
@@ -42,7 +42,6 @@
     </div>
     </head>
     <body>
-        {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
