--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-        <div class="container">
-            <a class="navbar-brand" href="#">CHAMPIONNAT DE SKI</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/resultats/general-hommes">General Hommes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/resultats/general-femmes">General Femmes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/resultats/M1M">M1M</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/resultats/M1F">M1F</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/resultats/M2M">M2M</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-   
-      
-    <body>
-     <div class="container">
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </div>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		{% block stylesheets %}{% endblock %}
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        {# <link href="{{ asset('css/app.css') }}"
+          rel="stylesheet"/> #}
+         {{ encore_entry_link_tags('app') }}
+	</head>
+	<body>
+
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-dark bg-info">
+				<div class="container">
+					<a class="navbar-brand" href="#">CHAMPIONNAT DE SKI</a>
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
+						<ul class="navbar-nav">
+							<li class="nav-item active">
+								<a class="nav-link mr-4" href="#">RÉSULTATS<span class="sr-only"></span>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link mr-4" href="/resultats/general-hommes">À PROPOS DE NOUS</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link mr-4" href="/resultats/general-femmes">REGLEMENT</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link mr-4" href="/resultats/M1M">Connection</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+
+		</header>
+		
+		
+		{% block body %}{% endblock %}
+{{ encore_entry_script_tags('app')}}
+		{% block javascripts %}
+		
+        {% endblock %}
+	</body>
 </html>
