--- a/templates/resultats/resultats.html.twig
+++ b/templates/resultats/resultats.html.twig
@@ -1,32 +1,83 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    {{ message }}
+	{{ message.text_message }}
 {% endblock %}
-
+{% block stylesheets %}
+	{# {{ encore_entry_link_tags('app') }} #}
+{% endblock %}
 {% block body %}
-    <table class="table table-striped">
-        <thead>
-            <tr>
-            <th scope="col">#</th>
-            <th scope="col">Nom</th>
-            <th scope="col">Prenom</th>
-            <th scope="col">Ville</th>
-            <th scope="col">Categorie</th>
-            <th scope="col">Resultat</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for key, resultat in resultats %}
-                <tr>
-                <th scope="row">{{key+1}}</th>
-                <td>{{ resultat.nom_participant }}</td>
-                <td>{{ resultat.prenom_participant }}</td>
-                <td>{{ resultat.ville }}</td>
-                <td>{{ resultat.nom_categorie }}</td>
-                <td>{{ resultat.resultat_final }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-{% endblock %}
+	<div id="carousel" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img src="{{ asset('images/carousel-img-1.jpg') }}" class="d-block w-100" alt="img1">
+			</div>
+			<div class="carousel-item">
+				<img src="{{ asset('images/carousel-img-2.jpg') }}" class="d-block w-100" alt="img2">
+			</div>
+			<div class="carousel-item">
+				<img src="{{ asset('images/carousel-img-3.jpg') }}" class="d-block w-100" alt="img3">
+			</div>
+		</div>
+		<a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
+	<div class="container mb-4 mt-2">
+		<div class="col-md-12 d-flex justify-content-center">
+			<div class="col-md-3">
+				<form>
+					<select id="select" name="select">
+						<option href="{{ path('resultats') }}" value="1">Résultat Générale</option>
+						<option href="/resultats/general-hommes" value="2">Génerale Hommes</option>
+						<option href="/resultats/general-femmes" value="3">Génerale Femmes</option>
+						<option href="/resultats/M1M" value="4">M1M</option>
+						<option href="/resultats/M1F" value="5">M1F</option>
+						<option href="/resultats/M2M" value="6">M2M</option>
+					</select>
+
+				</form>
+			</div>
+		</div>
+	</div>
+	<section>
+		<div class="container col-md-12 d-flex justify-content-center">
+			<div class="col-md-6">
+				<table class="table table-striped">
+					<thead>
+						<tr>
+							<th scope="col">#</th>
+							<th scope="col">Participants</th>
+							<th scope="col">Villes</th>
+							<th scope="col">Categories</th>
+							<th scope="col">Resultats</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for key, resultat in resultats %}
+							<tr>
+								<th scope="row">{{key+1}}</th>
+								<td>{{ resultat.nom_participant }}
+									{{ resultat.prenom_participant }}</td>
+								<td>{{ resultat.ville }}</td>
+								<td>{{ resultat.nom_categorie }}</td>
+								<td>{{ resultat.resultat_final }}</td>
+							</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
+		<section>
+		{% endblock %}
+
+		{% block javascripts %}
+			<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+			{# {{ parent() }}
+			{{ encore_entry_script_tags('app')}} #}
+		{% endblock %}
